--- a/HACC-AP/index.html
+++ b/HACC-AP/index.html
@@ -3,9 +3,9 @@
 		<title>HACC Visualization Team</title>
 	</head>
 	<body>
-		<span style="font-size: 24px;">Aloha+ Data Visualization</span>
+		<span style="font-size: 24px;">ALICE IN WONDERLAND: Aloha+ Data Visualization</span>
 		<br><br>
-                Team Captain: Alice Chen;<br>
+                STARRING: TEAM CAPTAIN, Alice Chen;<br>
                 Backend Team: Alice Chen, Sae Hyun Song, Ethan Chow;<br>
                 Frontend Team: David Wang, Sharie Anne Mamuad, Eddie Wen, Tetsuya Idota;<br>
 	</body>
