--- a/HACC-AP/index.html
+++ b/HACC-AP/index.html
@@ -5,6 +5,7 @@
 	<body>
 		<span style="font-size: 132px;">Aloha+ Data Visualization</span>
 		<br><br>
+		<img src="https://i.ytimg.com/vi/6MyjFHd04R8/maxresdefault.jpg">
                 TEAM CAPTAIN: Alice Chen;<br>
                 Backend Team: Alice Chen, Sae Hyun Song, Ethan Chow;<br>
                 Frontend Team: David Wang, Sharie Anne Mamuad, Eddie Wen, Tetsuya Idota;<br>
