Added more margin-top space to error pages

--- a/error/404.html
+++ b/error/404.html
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<div style="padding: 20px; background: #E3F2FD; text-align: center;">
-			<div style="margin-bottom: 20px; font-size: 86px; color: #2196F3;">We couldn't find that!</div>
+			<div style="margin: 10px 0 20px; font-size: 86px; color: #2196F3;">We couldn't find that!</div>
 			<div style="margin-bottom: 30px; font-size: 16px; color: #64B5F6;">404 Not Found</div>
 		</div>
 		<div style="margin-top: 40px;">Sorry, that page or resource does not exist!</div>
