--- a/error/500.html
+++ b/error/500.html
@@ -24,8 +24,8 @@
 		</style>
 	</head>
 	<body>
-		<div style="padding: 20px; background: #E3F2FD; text-align: center;">
-			<div style="margin-bottom: 20px; font-size: 86px; color: #2196F3;">Something went wrong!</div>
+		<div style="padding: 10px 0 20px; background: #E3F2FD; text-align: center;">
+			<div style="margin: 20px; font-size: 86px; color: #2196F3;">Something went wrong!</div>
 			<div style="margin-bottom: 30px; font-size: 16px; color: #64B5F6;">500 Internal Server Error</div>
 		</div>
 		<div style="margin-top: 40px;">We've encountered an error and cannot complete the request.</div>
