--- a/HACC-AP/dataUpload/dataUpload.html
+++ b/HACC-AP/dataUpload/dataUpload.html
@@ -58,16 +58,16 @@
 		<h2> Clean Energy </h2>
 		<form>
 			<label for = "firstq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "secondq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "thirdq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "fourthq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<input type = "submit" value = "Submit">
 			<input type = "reset" value = "Reset">
@@ -80,16 +80,16 @@
 		<h2> Solid Waste Reduction </h2>
 		<form>
 			<label for = "firstq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "secondq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "thirdq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "fourthq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<input type = "submit" value = "Submit">
 			<input type = "reset" value = "Reset">
@@ -102,16 +102,16 @@
 		<h2> Natural Resource Management </h2>
 		<form>
 			<label for = "firstq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "secondq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "thirdq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "fourthq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<input type = "submit" value = "Submit">
 			<input type = "reset" value = "Reset">
@@ -124,16 +124,16 @@
 		<h2> Local Food </h2>
 		<form>
 			<label for = "firstq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "secondq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "thirdq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "fourthq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<input type = "submit" value = "Submit">
 			<input type = "reset" value = "Reset">
@@ -146,16 +146,16 @@
 		<h2> Smart Sustainable Communities </h2>
 		<form>
 			<label for = "firstq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "secondq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "thirdq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "fourthq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<input type = "submit" value = "Submit">
 			<input type = "reset" value = "Reset">
@@ -168,16 +168,16 @@
 		<h2> Green Workforce & Education </h2>
 		<form>
 			<label for = "firstq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "secondq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "thirdq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<label for = "fourthq"> [Insert Question Here] </label>
-			<input type = "text" id : "firstq" name = "firstq">
+			<input type = "text" id = "firstq" name = "firstq">
 
 			<input type = "submit" value = "Submit">
 			<input type = "reset" value = "Reset">
