--- a/HACC-AP/dataUpload/dataUpload.html
+++ b/HACC-AP/dataUpload/dataUpload.html
@@ -35,7 +35,7 @@
 		</a>
 		
 		<a href = "#green-workforce-&-education" class = "button">
-			<p> Green Workforce & Education </p>
+			<p> Green Workforce &amp; Education </p>
 		</a>
 		
 
@@ -165,7 +165,7 @@
 
 		<div class = "page">
 		<div id = "green-workforce-&-education">
-		<h2> Green Workforce & Education </h2>
+		<h2> Green Workforce &amp; Education </h2>
 		<form>
 			<label for = "firstq"> [Insert Question Here] </label>
 			<input type = "text" id = "firstq" name = "firstq">
