--- a/HACC-AP/analytics.html
+++ b/HACC-AP/analytics.html
@@ -51,7 +51,7 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Aloha+EnErgy <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="#">Aloha+Energy <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Aloha+Waste</a>
@@ -68,7 +68,7 @@
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
           <h1>Dashboard</h1>
 
-          <section class="row text-center placeholders">
+          <!-- <section class="row text-center placeholders">
             <div class="col-6 col-sm-3 placeholder">
               <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
               <h4>Label</h4>
@@ -218,7 +218,7 @@
                 </tr>
               </tbody>
             </table>
-          </div>
+          </div> -->
         </main>
       </div>
     </div>
