--- a/HACC-AP/analytics.html
+++ b/HACC-AP/analytics.html
@@ -78,7 +78,7 @@
 			<svg id="fillgauge3" width="19%" height="200" onclick="gauge3.update(NewValue());"></svg>
 			<svg id="fillgauge4" width="19%" height="200" onclick="gauge4.update(NewValue());"></svg>
 			<svg id="fillgauge5" width="19%" height="200" onclick="gauge5.update(NewValue());"></svg>
-			<svg id="fillgauge6" width="19%" height="200" onclick="gauge6.update(NewValue());"></svg>
+	<!-- 		<svg id="fillgauge6" width="19%" height="200" onclick="gauge6.update(NewValue());"></svg> -->
 			<script language="JavaScript">
 				var gauge1 = loadLiquidFillGauge("fillgauge1", 55);
 				var config1 = liquidFillGaugeDefaultSettings();
