--- a/HACC-AP/clean-energy-transformation.html
+++ b/HACC-AP/clean-energy-transformation.html
@@ -57,7 +57,7 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Aloha+Energy <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/clean-energy-transformation">Aloha+Energy <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Aloha+Waste</a>
