--- a/HACC-AP/clean-waste-energy.html
+++ b/HACC-AP/clean-waste-energy.html
@@ -60,7 +60,7 @@
               <a class="nav-link active" href="/clean-energy-transformation">Aloha+Energy <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-waste-energy">Aloha+Waster</a>
+              <a class="nav-link" href="/clean-waste-energy">Aloha+Waste</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Aloha+Food</a>
