--- a/HACC-AP/analytics.html
+++ b/HACC-AP/analytics.html
@@ -73,7 +73,7 @@
 
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
           <h1>Dashboard</h1>
-		<!-- 	<svg id="fillgauge1" width="97%" height="250" onclick="gauge1.update(NewValue());"></svg> -->
+			<svg id="fillgauge1" width="97%" height="250" onclick="gauge1.update(NewValue());"></svg>
 			<svg id="fillgauge2" width="19%" height="200" onclick="gauge2.update(NewValue());"></svg>
 <!-- 			<svg id="fillgauge3" width="19%" height="200" onclick="gauge3.update(NewValue());"></svg>
 			<svg id="fillgauge4" width="19%" height="200" onclick="gauge4.update(NewValue());"></svg>
@@ -82,35 +82,25 @@
 			<script language="JavaScript">
 				var gauge2 = loadLiquidFillGauge("fillgauge2", 55);
 				var config1 = liquidFillGaugeDefaultSettings();
-				config1.circleColor = "#D4AB6A";
-				config1.textColor = "#553300";
-				config1.waveTextColor = "#805615";
-				config1.waveColor = "#AA7D39";
-				config1.circleThickness = 0.1;
-				config1.circleFillGap = 0.2;
-				config1.textVertPosition = 0.8;
-				config1.waveAnimateTime = 2000;
-				config1.waveHeight = 0.3;
-				config1.waveCount = 1;
-				<!-- config1.circleColor = "#FF7777"; -->
-				<!-- config1.textColor = "#FF4444"; -->
-				<!-- config1.waveTextColor = "#FFAAAA"; -->
-				<!-- config1.waveColor = "#FFDDDD"; -->
-				<!-- config1.circleThickness = 0.2; -->
-				<!-- config1.textVertPosition = 0.2; -->
-				<!-- config1.waveAnimateTime = 1000; -->
-				<!-- var gauge2= loadLiquidFillGauge("fillgauge2", 28, config1); -->
-				<!-- var config2 = liquidFillGaugeDefaultSettings(); -->
-				<!-- config2.circleColor = "#D4AB6A"; -->
-				<!-- config2.textColor = "#553300"; -->
-				<!-- config2.waveTextColor = "#805615"; -->
-				<!-- config2.waveColor = "#AA7D39"; -->
-				<!-- config2.circleThickness = 0.1; -->
-				<!-- config2.circleFillGap = 0.2; -->
-				<!-- config2.textVertPosition = 0.8; -->
-				<!-- config2.waveAnimateTime = 2000; -->
-				<!-- config2.waveHeight = 0.3; -->
-				<!-- config2.waveCount = 1; -->
+				config1.circleColor = "#FF7777";
+				config1.textColor = "#FF4444";
+				config1.waveTextColor = "#FFAAAA";
+				config1.waveColor = "#FFDDDD";
+				config1.circleThickness = 0.2;
+				config1.textVertPosition = 0.2;
+				config1.waveAnimateTime = 1000;
+				var gauge2= loadLiquidFillGauge("fillgauge2", 28, config1);
+				var config2 = liquidFillGaugeDefaultSettings();
+				config2.circleColor = "#D4AB6A";
+				config2.textColor = "#553300";
+				config2.waveTextColor = "#805615";
+				config2.waveColor = "#AA7D39";
+				config2.circleThickness = 0.1;
+				config2.circleFillGap = 0.2;
+				config2.textVertPosition = 0.8;
+				config2.waveAnimateTime = 2000;
+				config2.waveHeight = 0.3;
+				config2.waveCount = 1;
 				<!-- var gauge3 = loadLiquidFillGauge("fillgauge3", 60.1, config2); -->
 				<!-- var config3 = liquidFillGaugeDefaultSettings(); -->
 				<!-- config3.textVertPosition = 0.8; -->
