--- a/HACC-AP/clean-waste-energy.html
+++ b/HACC-AP/clean-waste-energy.html
@@ -66,7 +66,7 @@
               <a class="nav-link" href="#">Aloha+Food</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Aloha+Nature</a>
+              <a class="nav-link" href="/clean-nature-energy">Aloha+Nature</a>
             </li>
           </ul>
         </nav>
