--- a/HACC-AP/dataUpload/dataUpload-nature.html
+++ b/HACC-AP/dataUpload/dataUpload-nature.html
@@ -57,22 +57,24 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="/dataUpload-energy">Aloha+Energy <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="#energy">Aloha+Energy <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dataUpload-waste">Aloha+Waste</a>
+              <a class="nav-link" href="#waste">Aloha+Waste</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dataUpload-food">Aloha+Food</a>
+              <a class="nav-link" href="#local-food">Aloha+Food</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dataUpload-nature">Aloha+Nature</a>
+              <a class="nav-link" href="#nature">Aloha+Nature</a>
             </li>
           </ul>
         </nav>
 
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
 
+        <div class='page'>
+        <a name='energy'></a>
           <h1>Clean Energy</h1>
               <div class="form-group row">
                 <label for="example-text-input" class="col-2 col-form-label"> How many gallons of gas has your car consumed this past month? </label>
@@ -86,6 +88,24 @@
                   <input class="form-control" type="search" value="" id="example-search-input">
                 </div>
               </div>
+        </div>
+
+        <div class='page'>
+        <a name='waste'></a>
+          <h1>Solid Waste Reduction</h1>
+              <div class="form-group row">
+                <label for="example-text-input" class="col-2 col-form-label"> How many gallons of gas has your car consumed this past month? </label>
+                <div class="col-10">
+                  <input class="form-control" type="text" value="" id="example-text-input">
+                </div>
+              </div>
+              <div class="form-group row">
+              <label for="example-search-input" class="col-2 col-form-label">How much electricty did you use?</label>
+                <div class="col-10">
+                  <input class="form-control" type="search" value="" id="example-search-input">
+                </div>
+              </div>
+        </div>
 
         </main>
 
