--- a/HACC-AP/clean-nature-energy.html
+++ b/HACC-AP/clean-nature-energy.html
@@ -63,7 +63,7 @@
               <a class="nav-link" href="/clean-waste-energy">Aloha+Waste</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Aloha+Food</a>
+              <a class="nav-link" href="/clean-food-energy">Aloha+Food</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/clean-nature-energy">Aloha+Nature</a>
