--- a/HACC-AP/dataUpload/dataUpload-nature.html
+++ b/HACC-AP/dataUpload/dataUpload-nature.html
@@ -16,11 +16,6 @@
     
     <link href="dashboard.css" rel="stylesheet">
 
-    <style>
-      .page {
-        overflow: auto;
-      }
-    </style>
   </head>
 
   <body>
@@ -57,16 +52,16 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#energy">Aloha+Energy <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/dataUpload/dataUpload-energy">Aloha+Energy <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#waste">Aloha+Waste</a>
+              <a class="nav-link" href="/dataUpload/dataUpload-waste">Aloha+Waste</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#local-food">Aloha+Food</a>
+              <a class="nav-link" href="/dataUpload/dataUpload-food">Aloha+Food</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#nature">Aloha+Nature</a>
+              <a class="nav-link" href="/dataUpload/dataUpload-nature">Aloha+Nature</a>
             </li>
           </ul>
         </nav>
