--- a/HACC-AP/analytics.html
+++ b/HACC-AP/analytics.html
@@ -77,7 +77,7 @@
 				<svg id="fillgauge2" width="19%" height="200" onclick="gauge2.update(NewValue());"></svg>
 				<svg id="fillgauge3" width="19%" height="200" onclick="gauge3.update(NewValue());"></svg>
 				<svg id="fillgauge4" width="19%" height="200" onclick="gauge4.update(NewValue());"></svg>
-				<svg id="fillgauge5" width="19%" height="200" onclick="gauge5.update(NewValue());"></svg>
+				<!-- <svg id="fillgauge5" width="19%" height="200" onclick="gauge5.update(NewValue());"></svg> -->
 				<!-- <svg id="fillgauge6" width="19%" height="200" onclick="gauge6.update(NewValue());"></svg> -->
 				<script language="JavaScript">
 					var gauge1 = loadLiquidFillGauge("fillgauge1", 55);
@@ -126,23 +126,23 @@
 					config4.waveOffset = 0.25;
 					config4.textSize = 0.75;
 					config4.waveCount = 3;
-					var gauge5 = loadLiquidFillGauge("fillgauge5", 60.44, config4);
-					var config5 = liquidFillGaugeDefaultSettings();
-					config5.circleThickness = 0.4;
-					config5.circleColor = "#6DA398";
-					config5.textColor = "#0E5144";
-					config5.waveTextColor = "#6DA398";
-					config5.waveColor = "#246D5F";
-					config5.textVertPosition = 0.52;
-					config5.waveAnimateTime = 5000;
-					config5.waveHeight = 0;
-					config5.waveAnimate = false;
-					config5.waveCount = 2;
-					config5.waveOffset = 0.25;
-					config5.textSize = 1.2;
-					config5.minValue = 30;
-					config5.maxValue = 150
-					config5.displayPercent = false;
+					<!-- var gauge5 = loadLiquidFillGauge("fillgauge5", 60.44, config4); -->
+					<!-- var config5 = liquidFillGaugeDefaultSettings(); -->
+					<!-- config5.circleThickness = 0.4; -->
+					<!-- config5.circleColor = "#6DA398"; -->
+					<!-- config5.textColor = "#0E5144"; -->
+					<!-- config5.waveTextColor = "#6DA398"; -->
+					<!-- config5.waveColor = "#246D5F"; -->
+					<!-- config5.textVertPosition = 0.52; -->
+					<!-- config5.waveAnimateTime = 5000; -->
+					<!-- config5.waveHeight = 0; -->
+					<!-- config5.waveAnimate = false; -->
+					<!-- config5.waveCount = 2; -->
+					<!-- config5.waveOffset = 0.25; -->
+					<!-- config5.textSize = 1.2; -->
+					<!-- config5.minValue = 30; -->
+					<!-- config5.maxValue = 150 -->
+					<!-- config5.displayPercent = false; -->
 					<!-- var gauge6 = loadLiquidFillGauge("fillgauge6", 120, config5); -->
 
 					function NewValue(){
