--- a/HACC-AP/clean-nature-energy.html
+++ b/HACC-AP/clean-nature-energy.html
@@ -68,6 +68,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/clean-nature-energy">Aloha+Nature</a>
             </li>
+	    <li class="nav-item">
+            <a class="nav-link" href="#">Upload</a>
+            </li>
           </ul>
         </nav>
 
