Change sub-section pages

--- a/HACC-AP/dataUpload-waste.html
+++ b/HACC-AP/dataUpload-waste.html
@@ -73,7 +73,7 @@
 
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
 
-          <h1>Clean Energy</h1>
+          <h1>Solid Waste Reduction</h1>
               <div class="form-group row">
                 <label for="example-text-input" class="col-2 col-form-label"> How many gallons of gas has your car consumed this past month? </label>
                 <div class="col-10">
