--- a/HACC-AP/clean-food-energy.html
+++ b/HACC-AP/clean-food-energy.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#">Analytics</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Upload</a>
+            <a class="nav-link" href="/dataUpload">Upload</a>
           </li>
 	  
         </ul>
