--- a/HACC-AP/dataUpload-waste.html
+++ b/HACC-AP/dataUpload-waste.html
@@ -74,18 +74,32 @@
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
 
           <h1>Solid Waste Reduction</h1>
+
               <div class="form-group row">
-                <label for="example-text-input" class="col-2 col-form-label"> How many gallons of gas has your car consumed this past month? </label>
+                <label for="example-text-input" class="col-2 col-form-label"> Have you recycled any sort of materials? </label>
                 <div class="col-10">
                   <input class="form-control" type="text" value="" id="example-text-input">
                 </div>
               </div>
               <div class="form-group row">
-              <label for="example-search-input" class="col-2 col-form-label">How much electricty did you use?</label>
+              <label for="example-search-input" class="col-2 col-form-label">If so, what materials and how much? (ex. plastic bottles: 20 or by the amount of money earned)</label>
                 <div class="col-10">
                   <input class="form-control" type="search" value="" id="example-search-input">
                 </div>
               </div>
+              <div class="form-group row">
+              <label for="example-search-input" class="col-2 col-form-label">Have you reused any sort of items (containers, boxes, etc.)?</label>
+                <div class="col-10">
+                  <input class="form-control" type="search" value="" id="example-search-input">
+                </div>
+              </div>
+              <div class="form-group row">
+              <label for="example-search-input" class="col-2 col-form-label">Have you reduce the usage of anything? (ex. instead of buying boxes of plastic bottles, boil water)</label>
+                <div class="col-10">
+                  <input class="form-control" type="search" value="" id="example-search-input">
+                </div>
+              </div>
+
 
         </main>
 
