--- a/HACC-AP/dataUpload-food.html
+++ b/HACC-AP/dataUpload-food.html
@@ -75,13 +75,13 @@
 
           <h1>Local Food</h1>
               <div class="form-group row">
-                <label for="example-text-input" class="col-2 col-form-label"> How many gallons of gas has your car consumed this past month? </label>
+                <label for="example-text-input" class="col-2 col-form-label"> Where have you bought groceries? </label>
                 <div class="col-10">
                   <input class="form-control" type="text" value="" id="example-text-input">
                 </div>
               </div>
               <div class="form-group row">
-              <label for="example-search-input" class="col-2 col-form-label">How much electricty did you use?</label>
+              <label for="example-search-input" class="col-2 col-form-label">Have you wasted or thrown away anything?</label>
                 <div class="col-10">
                   <input class="form-control" type="search" value="" id="example-search-input">
                 </div>
