Update upper-navigation urls

--- a/HACC-AP/dataUpload.html
+++ b/HACC-AP/dataUpload.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="/clean-energy-transformation.html">Analytics</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/dataUPload">Upload</a>
+            <a class="nav-link" href="/dataUpload">Upload</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
